(* -*- tuareg -*- *)

open Jbuild_plugin.V1

let modules =
  let version = Scanf.sscanf ocaml_version "%u.%u" (fun a b -> (a, b)) in
  if version >= (4, 14) then ":standard" else ""

let () = Printf.ksprintf send {|
(library
 (name camlp_streams)
 (public_name camlp-streams)
 (modules %s)
 (wrapped false)
 (flags :standard -w -9))|} modules
